--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
@@ -13,7 +11,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -38,11 +36,6 @@ android {
     }
 }
 
-ext{
-    room_version = '2.1.0-alpha03'
-    paging_version = "2.1.0-rc01"
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -54,11 +47,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
-    kaptTest "android.arch.persistence.room:testing:$room_version"
+    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha03'
+    kaptTest 'androidx.room:room-testing:2.1.0-alpha03'
 
-    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation 'androidx.paging:paging-runtime:2.1.0-rc01'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
@@ -70,9 +63,9 @@ dependencies {
     }
 
     implementation 'com.google.dagger:dagger:2.16'
-    annotationProcessor  'com.google.dagger:dagger-compiler:2.16'
+    kapt  'com.google.dagger:dagger-compiler:2.16'
     implementation 'com.google.dagger:dagger-android-support:2.16'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+    kapt 'com.google.dagger:dagger-android-processor:2.16'
 
     //test dependency
     testImplementation 'junit:junit:4.12'
